<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".ProfileActivity">

    <TextView
        android:id="@+id/textView_nameLabel_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/label_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_ageLabel_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/label_age"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_nameLabel_profile" />

    <TextView
        android:id="@+id/textView_dName_profile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/profile_name"
        app:layout_constraintBottom_toBottomOf="@+id/textView_nameLabel_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView_nameLabel_profile"
        app:layout_constraintTop_toTopOf="@+id/textView_nameLabel_profile" />

    <TextView
        android:id="@+id/textView_dAge_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/noAge"
        app:layout_constraintBottom_toBottomOf="@+id/textView_ageLabel_profile"
        app:layout_constraintStart_toStartOf="@+id/textView_dName_profile"
        app:layout_constraintTop_toTopOf="@+id/textView_ageLabel_profile" />

    <TextView
        android:id="@+id/textView_yearsOld_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/years_old"
        app:layout_constraintBottom_toBottomOf="@+id/textView_dAge_profile"
        app:layout_constraintStart_toEndOf="@+id/textView_dAge_profile"
        app:layout_constraintTop_toTopOf="@+id/textView_dAge_profile" />

    <TextView
        android:id="@+id/textView_feeling_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/label_feeling1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_ageLabel_profile" />

    <TextView
        android:id="@+id/textView_moodRange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/no_value"
        app:layout_constraintEnd_toEndOf="@+id/imageView_moodIcon"
        app:layout_constraintStart_toStartOf="@+id/imageView_moodIcon"
        app:layout_constraintTop_toBottomOf="@+id/imageView_moodIcon" />

    <TextView
        android:id="@+id/textView_moodStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/no_value_status"
        app:layout_constraintBottom_toBottomOf="@+id/imageView_moodIcon"
        app:layout_constraintStart_toEndOf="@+id/imageView_moodIcon"
        app:layout_constraintTop_toTopOf="@+id/imageView_moodIcon" />

    <Button
        android:id="@+id/button_back_profile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/back_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_moodRange" />

    <ImageView
        android:id="@+id/imageView_moodIcon"
        android:layout_width="81dp"
        android:layout_height="59dp"
        android:layout_marginStart="24dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView_feeling_profile"
        app:layout_constraintStart_toEndOf="@+id/textView_feeling_profile"
        app:layout_constraintTop_toTopOf="@+id/textView_feeling_profile"
        app:srcCompat="@drawable/not_well" />
</androidx.constraintlayout.widget.ConstraintLayout>