<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".SelectMoodActivity">

    <TextView
        android:id="@+id/textView_feeling_mood"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/label_feeling2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <SeekBar
        android:id="@+id/seekBar_mood"
        android:layout_width="0dp"
        android:layout_height="43dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:max="4"
        app:layout_constraintEnd_toStartOf="@+id/imageView_mood"
        app:layout_constraintStart_toStartOf="@+id/textView_feeling_mood"
        app:layout_constraintTop_toBottomOf="@+id/textView_feeling_mood" />

    <TextView
        android:id="@+id/textView_moodProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/seekbar_progress"
        app:layout_constraintEnd_toEndOf="@+id/imageView_mood"
        app:layout_constraintStart_toStartOf="@+id/imageView_mood"
        app:layout_constraintTop_toBottomOf="@+id/imageView_mood" />

    <Button
        android:id="@+id/button_submitMood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="50dp"
        android:text="@string/submit_mood"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_moodProgress" />

    <Button
        android:id="@+id/button_cancelMood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/cancel_mood"
        app:layout_constraintBottom_toBottomOf="@+id/button_submitMood"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button_submitMood" />

    <ImageView
        android:id="@+id/imageView_mood"
        android:layout_width="59dp"
        android:layout_height="54dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/seekBar_mood"
        app:layout_constraintEnd_toEndOf="@+id/textView_feeling_mood"
        app:layout_constraintTop_toTopOf="@+id/seekBar_mood"
        app:srcCompat="@drawable/not_well" />
</androidx.constraintlayout.widget.ConstraintLayout>